--- a/index.html
+++ b/index.html
@@ -63,19 +63,19 @@
             <div class="container">
                 <H2 hidden>Peculiarities</H2>
             <ul class="peculiarities-list">
-                <li>
+                <li class="peculiarities-item">
                     <h3 class="peculiarities-title">Strategy</h3>
                     <p class="peculiarities-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
                 </li>
-                 <li>
+                 <li class="peculiarities-item">
                     <h3 class="peculiarities-title">Punctuality</h3>
                     <p class="peculiarities-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                 </li>
-                 <li>
+                 <li class="peculiarities-item">
                     <h3 class="peculiarities-title">Diligence</h3>
                     <p class="peculiarities-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
                 </li>
-                 <li>
+                 <li class="peculiarities-item">
                     <h3 class="peculiarities-title">Technologies</h3>
                     <p class="peculiarities-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                 </li>
