--- a/index.html
+++ b/index.html
@@ -90,23 +90,31 @@
             <ul class="ourteam-list">
                 <li class="ourteam-item">
                     <img src="./images/mark_gyerrero.jpg" alt="Mark Guerrero" width="264" height="260">
-                    <h3 class="title-team">Mark Guerrero</h3>
+                    <div class="employee-characteristics">
+                        <h3 class="title-team">Mark Guerrero</h3>
                     <p class="text-team">Product Designer</p>
+                    </div>
                 </li>
                  <li class="ourteam-item">
                     <img src="./images/tom_ford.jpg" alt="Tom Ford" width="264" height="260">
-                    <h3 class="title-team">Tom Ford</h3>
+                    <div class="employee-characteristics">
+                        <h3 class="title-team">Tom Ford</h3>
                     <p class="text-team">Frontend Developer</p>
+                    </div>
                 </li>
                  <li class="ourteam-item">
                     <img src="./images/camila_garcia.jpg" alt="Camila Garcia" width="264" height="260">
-                    <h3 class="title-team">Camila Garcia</h3>
+                   <div class="employee-characteristics">
+                        <h3 class="title-team">Camila Garcia</h3>
                     <p class="text-team">Marketing</p>
+                   </div>
                 </li>
                  <li class="ourteam-item">
                     <img src="./images/daniel_wilson.jpg" alt="Daniel Wilson" width="264" height="260">
-                    <h3 class="title-team">Daniel Wilson</h3>
+                   <div class="employee-characteristics">
+                        <h3 class="title-team">Daniel Wilson</h3>
                     <p class="text-team">UI Designer</p>
+                   </div>
                 </li>
             </ul>
             </div>
