--- a/index.html
+++ b/index.html
@@ -125,35 +125,47 @@
             <div class="container">
                 <h2 class="portfolio-title">Our Portfolio</h2>
             <ul class="portfolio-list">
-                <li class="portfolio-title">
+                <li class="portfolio-item">
                     <img src="./images/banking_app.jpg" alt="Banking App" width="360" height="300">
-                    <h3 class="head-portfolio">Banking App</h3>
+                    <div class="container-item">
+                        <h3 class="head-portfolio">Banking App</h3>
                     <p class="portfolio-text">App</p>
+                    </div>
                 </li>
-                 <li class="portfolio-title">
+                 <li class="portfolio-item">
                     <img src="./images/cashless_payment.jpg" alt="Cashless Payment" width="360" height="300">
-                    <h3 class="head-portfolio">Cashless Payment</h3>
+                    <div class="container-item">
+                        <h3 class="head-portfolio">Cashless Payment</h3>
                     <p class="portfolio-text">Marketing</p>
+                    </div>
                 </li>
-                 <li class="portfolio-title">
+                 <li class="portfolio-item">
                     <img src="./images/meditation_app.jpg" alt="Meditation App" width="360" height="300">
-                    <h3 class="head-portfolio">Meditation App</h3>
+                    <div class="container-item">
+                        <h3 class="head-portfolio">Meditation App</h3>
                     <p class="portfolio-text">App</p>
+                    </div>
                 </li>
-                 <li class="portfolio-title">
+                 <li class="portfolio-item">
                     <img src="./images/taxi_service.jpg" alt="Taxi Service" width="360" height="300">
-                    <h3 class="head-portfolio">Taxi Service</h3>
+                   <div class="container-item">
+                        <h3 class="head-portfolio">Taxi Service</h3>
                     <p class="portfolio-text">Marketing</p>
+                   </div>
                 </li>
-                <li class="portfolio-title">
+                <li class="portfolio-item">
                     <img src="./images/screen_illustrations.jpg" alt="Screen Illustrations" width="360" height="300">
-                    <h3 class="head-portfolio">Screen Illustrations</h3>
+                    <div class="container-item">
+                        <h3 class="head-portfolio">Screen Illustrations</h3>
                     <p class="portfolio-text">Design</p>
+                    </div>
                 </li>
-                <li class="portfolio-title">
+                <li class="portfolio-item">
                     <img src="./images/online_courses.jpg" alt="Online Courses" width="360" height="300">
-                    <h3 class="head-portfolio">Online Courses</h3>
+                    <div class="container-item">
+                        <h3 class="head-portfolio">Online Courses</h3>
                     <p class="portfolio-text">Marketing</p>
+                    </div>
                 </li>
             </ul>
             </div>
