--- a/index.html
+++ b/index.html
@@ -177,8 +177,10 @@
      <section class="section">
            <div class="container">
             <footer class="page-footer">
-            <a class="logo" href="./index.html">Web<span class="footer-logo">Studio</span></a>
+            <div>
+                <a class="logo logo-footer" href="./index.html">Web<span class="footer-logo">Studio</span></a>
             <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+            </div>
         </footer>
        </div>
      </section>
