--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 
 
    <!-- footer -->
-     <section class="section">
+     <section class="section footer-section">
            <div class="container">
             <footer class="page-footer">
             <div>
