--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <!-- peculiarities -->
         <section class="section">
             <div class="container">
-                <H2 hidden>Peculiarities</H2>
+                <h2 class="visually-hidden">Peculiarities</р2>
             <ul class="peculiarities-list">
                 <li class="peculiarities-item">
                     <h3 class="peculiarities-title">Strategy</h3>
