--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
         <!-- peculiarities -->
         <section class="section">
             <div class="container">
-                <h2 class="visually-hidden">Peculiarities</р2>
-            <ul class="peculiarities-list">
-                <li class="peculiarities-item">
+                <h2 class="visually-hidden">Peculiarities</h2>
+                <ul class="peculiarities-list">
+                    <li class="peculiarities-item">
                     <h3 class="peculiarities-title">Strategy</h3>
                     <p class="peculiarities-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
-                </li>
+                    </li>
                  <li class="peculiarities-item">
                     <h3 class="peculiarities-title">Punctuality</h3>
                     <p class="peculiarities-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
@@ -79,7 +79,7 @@
                     <h3 class="peculiarities-title">Technologies</h3>
                     <p class="peculiarities-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                 </li>
-            </ul>
+                </ul>
             </div>
         </section>
 
